
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int LPBYTE ;
typedef char* INT ;
typedef int HKEY ;
typedef scalar_t__ DWORD ;
typedef char* BOOL ;


 scalar_t__ ERROR_SUCCESS ;
 char* FALSE ;
 int HKEY_LOCAL_MACHINE ;
 int MMDRV_Install (char*,char*,char*) ;
 scalar_t__ REG_SZ ;
 scalar_t__ RegEnumValue (int ,char*,char*,scalar_t__*,int *,scalar_t__*,int ,scalar_t__*) ;
 scalar_t__ RegOpenKeyA (int ,char*,int *) ;
 int TRACE (char*,...) ;
 char* TRUE ;
 int _strnicmp (char*,char*,int) ;
 int memset (char*,int ,scalar_t__) ;
 int strcpy (char*,char*) ;
 int stricmp (char*,char*) ;

BOOL LoadRegistryMMEDrivers(char* key)
{
    INT driver_count = 0;
    INT driver_index = 0;
    HKEY drivers_key;

    DWORD value_name_length = 256;
    char value_name[256];

    DWORD value_data_length = 256;
    char value_data[256];

    char wavemapper[256] = { 0 };
    char midimapper[256] = { 0 };

    DWORD value_type;

    if ( RegOpenKeyA(HKEY_LOCAL_MACHINE, key, &drivers_key) != ERROR_SUCCESS )
    {
        TRACE("ERROR: Could not open: HKEY_LOCAL_MACHINE\\%s\n", key);
        return 0;
    }

    while ( RegEnumValue(drivers_key,
                         driver_index,
                         value_name,
                         &value_name_length,
                         ((void*)0),
                         &value_type,
                         (LPBYTE)value_data,
                         &value_data_length) == ERROR_SUCCESS )
    {
        BOOL valid_driver = FALSE;
        BOOL is_mapper = FALSE;

        if ( value_type == REG_SZ )
        {



            if ( ! stricmp("wavemapper", value_name) )
            {
                TRACE("Found a Wave-mapper: %s\n", value_data);

                strcpy(wavemapper, value_data);
                is_mapper = TRUE;
                driver_count ++;
            }
            else if ( ! stricmp("midimapper", value_name) )
            {
                TRACE("Found a MIDI-mapper: %s\n", value_data);

                strcpy(midimapper, value_data);
                is_mapper = TRUE;
                driver_count ++;
            }
            else if ( ! _strnicmp("wave", value_name, 4) )
            {
                TRACE("Found a Wave driver: %s\n", value_data);
                valid_driver = TRUE;
                driver_count ++;
            }
            else if ( ! _strnicmp("midi", value_name, 4) )
            {
                TRACE("Found a MIDI driver: %s\n", value_data);
                valid_driver = TRUE;
                driver_count ++;
            }
            else if ( ! _strnicmp("mixer", value_name, 5) )
            {
                TRACE("Found a mixer driver: %s\n", value_data);
                valid_driver = TRUE;
                driver_count ++;
            }
            else if ( ! _strnicmp("aux", value_name, 4) )
            {
                TRACE("Found an aux driver: %s\n", value_data);
                valid_driver = TRUE;
                driver_count ++;
            }
            else
            {
                TRACE("Not supported: %s\n", value_data);
            }




            if ( valid_driver )
            {
                if ( ! MMDRV_Install(value_name, value_data, is_mapper) )
                {
                    TRACE("FAILED when initializing %s\n", value_data);
                }
            }
        }
        else
        {
            TRACE("Invalid data format\n");
        }


        value_name_length = 256;
        value_data_length = 256;
        memset(value_name, 0, value_name_length);
        memset(value_data, 0, value_data_length);

        driver_index ++;
    }


    if (*wavemapper)
    {
        if (!MMDRV_Install("wavemapper", wavemapper, TRUE))
        {
            TRACE("FAILED when initializing %s\n", wavemapper);
        }
    }

    if (*midimapper)
    {
        if (!MMDRV_Install("midimapper", midimapper, TRUE))
        {
            TRACE("FAILED when initializing %s\n", midimapper);
        }
    }

    TRACE("Found a total of %d drivers\n", driver_count);

    return driver_count;
}
